2008-02-02  John W. Eaton  <jwe@octave.org>

	* help.cc (do_type): Don't print dyamically loaded function files.

	* ov-fcn.h (octave_function::is_dynamically_loaded_function): Delete.

2008-02-01  John W. Eaton  <jwe@octave.org>

	* symtab.cc (Fset_variable, Fvariable_value):
	New functions, but commented out for now.

2008-01-30  Michael Goffioul  <michael.goffioul@gmail.com>

	* graphics.h.in (axes::properties::get_transform_matrix,
	axes::properties::get_inverse_transform_matrix,
	axes::properties::get_opengl_matrix_1,
	axes::properties::get_opengl_matrix_2,
	axes::properties::get_transform_zlim): New accessors.
	(base_properties::is_clipping): New accessor.
	(class graphics_xform): New class encapsulating axes transformation.
	(axes::properties::get_transform): New method returning a
	graphics_xform object.
	* graphics.cc (class graphics_xform): New class.

2008-01-31  David Bateman  <dbateman@free.fr>

	* ov.cc (octave_value::octave_value (const ArrayN<bool>&),
	octave_value::octave_value (const Sparse<bool>&, const MatrixType &),
	octave_value::octave_value (const ArrayN<std::streamoff>&)): New 
	constructors.
	* ov.h: (octave_value (const ArrayN<bool>&),
	octave_value (const Sparse<bool>&, const MatrixType &),
	octave_value (const ArrayN<std::streamoff>&)): Declare them.
	(octave_value sort (octave_idx_type, sortmode) const, octave_value
	sort (Array<octave_idx_type> &, octave_idx_type, sortmode) const):
	octave_value sort method.
	
	
	* ov-base.cc (sort): Base versions of teh octave_value sort methods.
	* ov-base.h (sort): Declare the octave_value sort methods
	* ov-base-scalar.h (sort): Simple sort methods for scalars.
	* ov-base-mat.h, ov-base-sparse.h (sort): Sort methods calling
	underlying array or sparse sort methods.
	* ov-str-mat.h (sort): String specific sort methods.
	
	* TEMPLATE-INST/Array-tc.cc: Instantiate the array sort methods.
	* ov-streamoff.h (sort): Sort versions returning and error.